--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,135 @@
 @import "tailwindcss";
 
+
+.custom-bg {
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+}
+
+
 @theme {
-    
+    --color-primary: #00008B;
+}
+
+@media (max-width: 1200px) {
+    .media-bg {
+        background-size: 260%;
+    }
+}
+
+@media (max-width: 1150px) {
+    .media-main a {
+        display: block;
+        text-align: center;
+    }
+}
+
+
+@media (max-width: 1000px) {
+    .media-navbar div p {
+        font-size: 18px;
+    }
+
+    .media-bg {
+        background-size: 310%;
+    }
+
+    .media-main h3 {
+        font-size: 20px;
+    }
+
+    .media-main p {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 972px) {
+    .media-main div div div{
+        padding: 25px;
+    }
+}
+
+@media (max-width: 786px) {
+    .media-navbar div p {
+        font-size: 16px;
+    }
+
+    .media-bg {
+        background-size: 350%;
+    }
+}
+
+@media (max-width: 710px) {
+    .media-bg {
+        background-size: 393%;
+    }
+
+    .media-main {
+        padding-top: 90px;
+        padding-bottom: 90px;
+    }
+}
+
+@media (max-width: 660px) {
+    .media-navbar div  {
+        gap: 30px;
+    }
+
+    .media-bg {
+        background-size: 402%;
+    }
+
+}
+
+@media (max-width: 640px) {
+    .media-navbar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .media-navbar img {
+        width: 45px;
+        margin-bottom: 12px;
+    }
+
+    .media-navbar div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .media-navbar div:last-child {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 12px;
+    }
+
+    .media-main h2 {
+        font-size: 28px;
+    }
+
+    .media-main p {
+        font-size: 16px;
+    }
+
+    .media-bg {
+        background-size: 720%;
+    }
+}
+
+@media (max-width: 420px) {
+    .media-main div div  {
+        padding: 36px;
+    }
+
+    .media-bg {
+        background-size: 800%;
+    }
 }
